--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <header>
+        <div>
+
+            <a><img src="./images/JUMPMAN-ICONO.png" alt="icono de jordan"></a>
+            <input type="checkbox">
+            <label for="menu">
+                <img src="./images/menu.png">
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="#">TITULO 1</a></li>
+                    <li><a href="#">TITULO 2</a></li>
+                    <li><a href="#">TITULO 3</a></li>
+                </ul>
+            </nav>
+
+        </div>
 
     </header>
 
