--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/assets/icons/JUMPMAN-ICONO.png">
     <title>JORDAN</title>
 </head>
 <body>
     <header>
-        <div>
+        <div class="menu__container">
 
-            <a><img src="./images/JUMPMAN-ICONO.png" alt="icono de jordan"></a>
-            <input type="checkbox">
+            <a><img src="./images/JUMPMAN-ICONO.png" alt="icono de jordan" class="logo"></a>
+            <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="./images/menu.png">
+                <img src="./images/menu.png" class="menu-icon">
             </label>
-            <nav>
+            <nav class="navbar">
                 <ul>
                     <li><a href="#">TITULO 1</a></li>
                     <li><a href="#">TITULO 2</a></li>
