se modifico la navbar, se aplico texto e imagen al header

--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 </head>
 <body>
     <header>
-        <div class="menu__container">
-
-            <a><img src="./images/JUMPMAN-ICONO.png" alt="icono de jordan" class="logo"></a>
+        <div class="menu container" id="inicio">
+            <img src="/assets/icons/JUMPMAN-ICONO.png" class="logo">
             <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="./images/menu.png" class="menu-icon">
-            </label>
+            <label for="menu"> <img src="/assets/images/menu.png" class="menu-icono" alt=""></label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">TITULO 1</a></li>
-                    <li><a href="#">TITULO 2</a></li>
-                    <li><a href="#">TITULO 3</a></li>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#productos">Productos</a></li>
+                    <li><a href="#contactos">Contacto</a></li>
                 </ul>
             </nav>
+        </div>
+        
+        <div class="header-content container">
+            <div class="header-txt">
+                <h1>AIR JORDAN</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente nemo cupiditate consequuntur sunt nulla. Inventore non accusantium repellendus facere quos quam modi, earum optio dicta nostrum beatae cum perspiciatis a numquam est mollitia, assumenda voluptate, porro explicabo minus? Dolorem adipisci provident dolor veritatis eligendi nihil cum expedita animi placeat?
+                </p>
+            </div>
 
+            <div class="header-img">
+                <img src="/assets/images/AIR JORDAN-LOGO-EFECT.png" class="airjordan" alt="">
+            </div>
         </div>
 
     </header>
