se creo seccion categoria

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
         </div>
-        
+
         <div class="header-content container">
             <div class="header-txt">
                 <h1>AIR JORDAN</h1>
@@ -37,6 +37,20 @@
     </header>
 
     <main>
+
+        <section class="category" id="productos">
+
+            <div class="info-1">
+                <a href="#"><h2>INDUMENTARIA</h2></a>
+            </div>
+            <div class="info-2">
+                <a href="#"><h2>CALZADOS</h2></a>
+            </div>
+            <div class="info-3">
+                <a href="#"><h2>ACCESORIOS</h2></a>
+            </div>
+
+        </section>
 
     </main>
 
