se creo seccion productos con sus clases correspondientes

--- a/index.html
+++ b/index.html
@@ -51,6 +51,72 @@
             </div>
 
         </section>
+        
+        <section class="products">
+
+            <div class="title">
+                <h2>Productos Más Vendidos</h2>
+            </div>
+
+            <div class="products-container">
+                <div class="products-grid">
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/1.png" alt="Imagen Producto 1">
+                        </div>
+                        <h3 class="titles">MOCHILA JORDAN</h3>
+                        <p class="product-txt">$200.000 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/2.png" alt="Imagen Producto 2">
+                        </div>
+                        <h3 class="titles">BUZO JORDAN</h3>
+                        <p class="product-txt">$120.00 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/3.png" alt="Imagen Producto 3">
+                        </div>
+                        <h3 class="titles">JORDAN 11 BREAD</h3>
+                        <p class="product-txt">$360.000 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/4.png" alt="Imagen Producto 4">
+                        </div>
+                        <h3 class="titles">JORDAN RETRO 4</h3>
+                        <p class="product-txt">$320.000 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/5.png" alt="Imagen Producto 5">
+                        </div>
+                        <h3 class="titles">AIR JORDAN DELUX</h3>
+                        <p class="product-txt">$250.000 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+
+                    <div class="box-products">
+                        <div class="product-img">
+                            <img src="/assets/images/6.png" alt="Imagen Producto 6">
+                        </div>
+                        <h3 class="titles">BOLSO JORDAN</h3>
+                        <p class="product-txt">$330.00 ARG </p>
+                        <button class="btn-1">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
