se arreglo seccion footer html, se dio estilo a mismo y se añadio icono de wspp funcional

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 
     <footer class="footer">
         
-        <div class="contenedor__footer">
-            <div class="info__contacto">
-                <h3 class="titulo__footer">Contacto:</h3>
+        <div class="footer-container">
+            <div>
+                <h3 class="title-footer">Contacto:</h3>
                 <p class="texto-email"><a class="email" href="mailto:faustominora1@gmail.com">faustominora1@gmail.com</a></p>
-                <p><a class="telefono" href="tel:+5493364660430">+5493364660430</a></p>
+                <p><a class="phone" href="tel:+5493364660430">+5493364660430</a></p>
                 
             </div>
         </div>
