ajustes para responsive

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="container-boton">
-            <a href="https://wa.me/+5493364660430?text=Quiero%20más%20un%20Informacion%20web%20php" target="_blank">
+            <a href="https://wa.me/+5493364660430?text=Quiero%20más%20un%20Informacion%20%20" target="_blank">
                 <img class="boton" src="/assets/icons/icono-wsp.png" alt="">
             </a>
         </div>
