ajustes para el responsive

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <section class="category" id="productos">
 
             <div class="info-1">
-                <a href="#"><h2>INDUMENTARIA</h2></a>
+                <a href=""><h2>INDUMENTARIA</h2></a>
             </div>
             <div class="info-2">
-                <a href="#"><h2>CALZADOS</h2></a>
+                <a href=""><h2>CALZADOS</h2></a>
             </div>
             <div class="info-3">
-                <a href="#"><h2>ACCESORIOS</h2></a>
+                <a href=""><h2>ACCESORIOS</h2></a>
             </div>
 
         </section>
