ajuste de imagen del header y se campio texto del header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-content container">
             <div class="header-txt">
                 <h1>AIR JORDAN</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente nemo cupiditate consequuntur sunt nulla. Inventore non accusantium repellendus facere quos quam modi, earum optio dicta nostrum beatae cum perspiciatis a numquam est mollitia, assumenda voluptate, porro explicabo minus? Dolorem adipisci provident dolor veritatis eligendi nihil cum expedita animi placeat?
+                <p>"Air Jordan, nacido en 1985, revolucionó las zapatillas de baloncesto. Diseñado para Michael Jordan, el icónico logotipo "Jumpman" de las zapatillas y su llamativo color negro/rojo desafiaron las reglas de la NBA. A pesar de la controversia, las zapatillas se convirtieron en un fenómeno cultural, con nuevos diseños y colaboraciones. se lanza anualmente, consolidando el estatus de Air Jordan como una marca deportiva legendaria".
                 </p>
             </div>
 
