se direcciono los enlaces de categorias

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
         <section class="category" id="productos">
 
-            <div class="info-1">
-                <a href=""><h2>INDUMENTARIA</h2></a>
+            <div class="info-1" id="1">
+                <a href="#1"><h2>INDUMENTARIA</h2></a>
             </div>
-            <div class="info-2">
-                <a href=""><h2>CALZADOS</h2></a>
+            <div class="info-2" id="2">
+                <a href="#2"><h2>CALZADOS</h2></a>
             </div>
-            <div class="info-3">
-                <a href=""><h2>ACCESORIOS</h2></a>
+            <div class="info-3" id="3">
+                <a href="#3"><h2>ACCESORIOS</h2></a>
             </div>
 
         </section>
